<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:autofillHints="emailAddress"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/ic_bg"
    app:flow_verticalGap="12dp">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@drawable/border_textview"/>

    <EditText
        android:id="@+id/username"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:padding="14dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:background="@drawable/border_button"
        android:layout_margin="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"/>

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#0277BD" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</LinearLayout>