<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/log_emotion"
            android:background="@drawable/border_textview"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/select_emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/select_your_emotion"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="60dp">

            <Button
                android:id="@+id/button_angry"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_angry"/>

            <TextView
                android:id="@+id/text_angry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="5dp"
                android:text="Angry"
                android:textStyle="bold"
                android:background="@android:color/transparent"/> <!-- Initial background -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_sad"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_sad"/>

            <TextView
                android:id="@+id/text_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="5dp"
                android:text="Sad"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="60dp">

            <Button
                android:id="@+id/button_anxious"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_anxious" />

            <TextView
                android:id="@+id/text_anxious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="5dp"
                android:text="Anxiety"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_fear"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_fear" />

            <TextView
                android:id="@+id/text_fear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Fear"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/botResponseEditText"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:gravity="top"
        android:hint="@string/bot_s_response"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColorHint="#546E7A" />
</LinearLayout>